--- a/pom.xml
+++ b/pom.xml
@@ -198,5 +198,13 @@
             <artifactId>spring-test</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.28.Final</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
